some basic webpage layout

--- a/src/common/css/common_const.styl
+++ b/src/common/css/common_const.styl
@@ -1,1 +1,10 @@
-$websiteBasicColor = #5DA4E6
+/** Height of Top Navigation Bar **/
+$TopNavBarHeight = 50px
+
+/** Width of Side Navigation Bar **/
+$SideNavBarWidth = 150px
+
+
+$WebsiteBasicColor = #5DA4E6
+
+
