--- a/src/components/common/TopNavBar/index.styl
+++ b/src/components/common/TopNavBar/index.styl
@@ -1,5 +1,16 @@
 @import '~common/css/common_const.styl'
-.nav
+
+.top-nav
+    position fixed
+    top 0
+    left 0
     width 100%
-    height 50px
-    background-color $websiteBasicColor
+    height $TopNavBarHeight
+    background-color $WebsiteBasicColor
+    box-shadow 0px 2px 5px #888
+
+.logo
+    line-height $TopNavBarHeight
+    margin-left 20px
+    color #FFF
+    font-weight bold
