--- a/src/components/common/SideNavBar/index.styl
+++ b/src/components/common/SideNavBar/index.styl
@@ -1,5 +1,7 @@
 @import '~common/css/common_const.styl'
 
+$SideNavBarItemHeight = 50px
+
 .side-nav
     position fixed
     top 0
@@ -8,3 +10,25 @@
     margin-top $TopNavBarHeight
     box-shadow 2px 0 10px #888
     background-color #555
+    & ul
+        display block
+        position relative
+        list-style none
+        margin 0
+        padding 0
+        & li
+            display block
+            cursor pointer
+        & a
+            display block
+            height $SideNavBarItemHeight
+            line-height $SideNavBarItemHeight
+            width 100%
+            text-decoration none
+            color #FFF
+        & a:hover
+            background-color #AAA
+
+.side-nav-child
+    display block
+    
