--- a/src/common/css/common_const.styl
+++ b/src/common/css/common_const.styl
@@ -1,10 +1,13 @@
+$FontSizeNormal = 14px
+
 /** Height of Top Navigation Bar **/
 $TopNavBarHeight = 50px
 
 /** Width of Side Navigation Bar **/
 $SideNavBarWidth = 150px
 
+/** Color of Top Navigation Bar **/
+$TopNavBarColor = #5DA4E6
 
-$WebsiteBasicColor = #5DA4E6
-
-
+/** Color Used in Buttons, Links, etc **/
+$WidgetBaseColor = #00BAA6
