--- a/src/components/common/TopNavBar/index.styl
+++ b/src/components/common/TopNavBar/index.styl
@@ -6,7 +6,7 @@
     left 0
     width 100%
     height $TopNavBarHeight
-    background-color $WebsiteBasicColor
+    background-color $TopNavBarColor
     box-shadow 0px 2px 5px #888
 
 .logo
