--- a/src/app.styl
+++ b/src/app.styl
@@ -1,8 +1,14 @@
 @import '~common/css/common_const.styl'
 
 .content-body
+    min-width 1060px
     box-sizing content-box
     margin-top $TopNavBarHeight
     margin-left $SideNavBarWidth
     padding-top 10px
     padding-left 10px
+
+.content-core
+    width 1060px
+    padding 0
+    margin auto
